Fixed website title to be responsive on mobile

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -13,9 +13,6 @@ body {
 }
 
 header {
-	background-color: white;
-	height: 75px;
-	width: auto;
 	background-image: linear-gradient(90deg, #e5ff00 10%, #00b666 60%,#00b666 90%);
 }
 
@@ -28,6 +25,7 @@ footer {
 h1 {
 	padding-left: 50px;
 	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .navigation {
